{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 833,
  "lineage": "ce79ea70-be94-d71c-df59-b7e6136e5f90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c15b10d75343ee8",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:elastic-ip/eipalloc-04c15b10d75343ee8",
            "domain": "vpc",
            "id": "eipalloc-04c15b10d75343ee8",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-35-177-29-24.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.29.24",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "techcorp-nat-eip-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-eip-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ac826160969646c",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:elastic-ip/eipalloc-07ac826160969646c",
            "domain": "vpc",
            "id": "eipalloc-07ac826160969646c",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-41-182-129.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.182.129",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "techcorp-nat-eip-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-eip-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07afb7a29c5b33d2b",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-09b6b0f5da36b1176",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b6b0f5da36b1176",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "techcorp-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f8b2d4fd385eda13"
              }
            ],
            "primary_network_interface_id": "eni-0f8b2d4fd385eda13",
            "private_dns": "ip-10-0-1-175.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-18-175-146-226.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.175.146.226",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01bbac250dca6eb07",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0801012aeb307a6e8",
            "tags": {
              "Name": "techcorp-bastion-server",
              "Tier": "bastion"
            },
            "tags_all": {
              "Name": "techcorp-bastion-server",
              "Tier": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b416213e666fd231"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-09b6b0f5da36b1176",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_key_pair.deployer-key",
            "aws_security_group.bastion-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.amazon",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07afb7a29c5b33d2b",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-054ca03ca873f2928",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054ca03ca873f2928",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "techcorp-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c091ad895f1f9b78"
              }
            ],
            "primary_network_interface_id": "eni-0c091ad895f1f9b78",
            "private_dns": "ip-10-0-3-185.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.185",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d63decc7fe43859",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08390911875ff3dc7",
            "tags": {
              "Name": "techcorp-database-server",
              "Tier": "database"
            },
            "tags_all": {
              "Name": "techcorp-database-server",
              "Tier": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02fc8a124cc848c44"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-054ca03ca873f2928",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_key_pair.deployer-key",
            "aws_security_group.bastion-sg",
            "aws_security_group.database-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.amazon",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07afb7a29c5b33d2b",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-09bcb728d914900c2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bcb728d914900c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "techcorp-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0428248f326bd9dc8"
              }
            ],
            "primary_network_interface_id": "eni-0428248f326bd9dc8",
            "private_dns": "ip-10-0-3-93.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.93",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e4c2e635ad5a79e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08390911875ff3dc7",
            "tags": {
              "Name": "techcorp-web-server-1",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "techcorp-web-server-1",
              "Tier": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01edfd40b3a376b1c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-09bcb728d914900c2",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_key_pair.deployer-key",
            "aws_security_group.bastion-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.amazon",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07afb7a29c5b33d2b",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-047ac2354f9c0339c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047ac2354f9c0339c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "techcorp-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ea06d29f96400720"
              }
            ],
            "primary_network_interface_id": "eni-0ea06d29f96400720",
            "private_dns": "ip-10-0-4-152.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.152",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a8b935b745ee8d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07efda694227d9852",
            "tags": {
              "Name": "techcorp-web-server-2",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "techcorp-web-server-2",
              "Tier": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01edfd40b3a376b1c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-047ac2354f9c0339c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_key_pair.deployer-key",
            "aws_security_group.bastion-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.amazon",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:internet-gateway/igw-020c75c7d22a5bd78",
            "id": "igw-020c75c7d22a5bd78",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "tags": {
              "Name": "techcorp-ig"
            },
            "tags_all": {
              "Name": "techcorp-ig"
            },
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:loadbalancer/app/techcorpapp-lb/a3e82a952f7972c1",
            "arn_suffix": "app/techcorpapp-lb/a3e82a952f7972c1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorpapp-lb-176500584.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:loadbalancer/app/techcorpapp-lb/a3e82a952f7972c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorpapp-lb",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-01edfd40b3a376b1c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0801012aeb307a6e8"
              },
              {
                "subnet_id": "subnet-088e3eb243a560c4e"
              }
            ],
            "subnets": [
              "subnet-0801012aeb307a6e8",
              "subnet-088e3eb243a560c4e"
            ],
            "tags": {
              "Name": "techcorp-app-lb"
            },
            "tags_all": {
              "Name": "techcorp-app-lb"
            },
            "vpc_id": "vpc-0274a86553b400fc6",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:loadbalancer/app/techcorpapp-lb/a3e82a952f7972c1"
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.web-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:listener/app/techcorpapp-lb/a3e82a952f7972c1/4fd40211fb9e9154",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:targetgroup/techcorp-web-tg/635c3b35a4d6eb53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:listener/app/techcorpapp-lb/a3e82a952f7972c1/4fd40211fb9e9154",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:loadbalancer/app/techcorpapp-lb/a3e82a952f7972c1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:listener/app/techcorpapp-lb/a3e82a952f7972c1/4fd40211fb9e9154"
          },
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.web-tg",
            "aws_security_group.bastion-sg",
            "aws_security_group.web-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:targetgroup/techcorp-web-tg/635c3b35a4d6eb53",
            "arn_suffix": "targetgroup/techcorp-web-tg/635c3b35a4d6eb53",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:targetgroup/techcorp-web-tg/635c3b35a4d6eb53",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "techcorp-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "techcorp-web-tg"
            },
            "tags_all": {
              "Name": "techcorp-web-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:targetgroup/techcorp-web-tg/635c3b35a4d6eb53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-tg-at",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:targetgroup/techcorp-web-tg/635c3b35a4d6eb53-20251126181831450500000008",
            "port": 80,
            "region": "eu-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:targetgroup/techcorp-web-tg/635c3b35a4d6eb53",
            "target_id": "i-09bcb728d914900c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web-servers",
            "aws_key_pair.deployer-key",
            "aws_lb_target_group.web-tg",
            "aws_security_group.bastion-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.amazon",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:targetgroup/techcorp-web-tg/635c3b35a4d6eb53-20251126181831721600000009",
            "port": 80,
            "region": "eu-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:226290659927:targetgroup/techcorp-web-tg/635c3b35a4d6eb53",
            "target_id": "i-047ac2354f9c0339c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web-servers",
            "aws_key_pair.deployer-key",
            "aws_lb_target_group.web-tg",
            "aws_security_group.bastion-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.amazon",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c15b10d75343ee8",
            "association_id": "eipassoc-05ff2827b9d9de34f",
            "connectivity_type": "public",
            "id": "nat-0bc8f5380e480ddf0",
            "network_interface_id": "eni-0ae5c1113336f4c43",
            "private_ip": "10.0.1.182",
            "public_ip": "35.177.29.24",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0801012aeb307a6e8",
            "tags": {
              "Name": "techcorp-nat-gateway-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ac826160969646c",
            "association_id": "eipassoc-0bc9e7c1c29c60583",
            "connectivity_type": "public",
            "id": "nat-01d872f0fc23bb324",
            "network_interface_id": "eni-0190ebfa0c4f04bce",
            "private_ip": "10.0.2.23",
            "public_ip": "13.41.182.129",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088e3eb243a560c4e",
            "tags": {
              "Name": "techcorp-nat-gateway-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-gateway-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:route-table/rtb-09f3780ddf35afd31",
            "id": "rtb-09f3780ddf35afd31",
            "owner_id": "226290659927",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc8f5380e480ddf0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-1"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "rtb-09f3780ddf35afd31",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:route-table/rtb-03e1f6d124a00de43",
            "id": "rtb-03e1f6d124a00de43",
            "owner_id": "226290659927",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d872f0fc23bb324",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-2"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "rtb-03e1f6d124a00de43",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:route-table/rtb-08133ae4d7d3448a6",
            "id": "rtb-08133ae4d7d3448a6",
            "owner_id": "226290659927",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020c75c7d22a5bd78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-public-rt"
            },
            "tags_all": {
              "Name": "techcorp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "rtb-08133ae4d7d3448a6",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090eb06188e2cb9b7",
            "region": "eu-west-2",
            "route_table_id": "rtb-09f3780ddf35afd31",
            "subnet_id": "subnet-08390911875ff3dc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049d47bdf464435b0",
            "region": "eu-west-2",
            "route_table_id": "rtb-03e1f6d124a00de43",
            "subnet_id": "subnet-07efda694227d9852"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6a658fd7b8febb8",
            "region": "eu-west-2",
            "route_table_id": "rtb-08133ae4d7d3448a6",
            "subnet_id": "subnet-0801012aeb307a6e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c34e9dd1e3d87234",
            "region": "eu-west-2",
            "route_table_id": "rtb-08133ae4d7d3448a6",
            "subnet_id": "subnet-088e3eb243a560c4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-0b416213e666fd231",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b416213e666fd231",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.89.23.119/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-bastion-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-bastion-sg",
              "Tier": "bastion"
            },
            "tags_all": {
              "Name": "techcorp-bastion-sg",
              "Tier": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-0b416213e666fd231",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-02fc8a124cc848c44",
            "description": "Allow custom inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fc8a124cc848c44",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01edfd40b3a376b1c"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b416213e666fd231"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-database-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-database-sg",
              "Tier": "database"
            },
            "tags_all": {
              "Name": "techcorp-database-sg",
              "Tier": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-02fc8a124cc848c44",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.web-sg",
            "aws_vpc.vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-01edfd40b3a376b1c",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01edfd40b3a376b1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b416213e666fd231"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-web-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-web-sg",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "techcorp-web-sg",
              "Tier": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-01edfd40b3a376b1c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-08390911875ff3dc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08390911875ff3dc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "techcorp-private-subnet-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-08390911875ff3dc7",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-07efda694227d9852",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07efda694227d9852",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "techcorp-private-subnet-2",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-07efda694227d9852",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-0801012aeb307a6e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0801012aeb307a6e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "techcorp-public-subnet-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-0801012aeb307a6e8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-088e3eb243a560c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088e3eb243a560c4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "techcorp-public-subnet-2",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-0274a86553b400fc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-088e3eb243a560c4e",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:vpc/vpc-0274a86553b400fc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f748fcbba84b0e8",
            "default_route_table_id": "rtb-099a5828c34e5eada",
            "default_security_group_id": "sg-01db9f9ecf30fd9de",
            "dhcp_options_id": "dopt-0c9b6880034d25e1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0274a86553b400fc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099a5828c34e5eada",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "vpc-0274a86553b400fc6",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}